src/test/testFiles/valid/binaryTree.manimdsl
let y = Node<number>(4);
let x = 5;
y.value = x;