src/test/testFiles/invalid/semanticErrors/incompatibleArrayDimension.manimdsl
let x = Array<Array<Array<boolean>>>();
let y = 0;